fix overflow with footnote content, about spacing

--- a/browser/src/components/EssayBody.css
+++ b/browser/src/components/EssayBody.css
@@ -134,6 +134,8 @@ p:hover .footnote-content {
     position: relative;
   }
   .footnote-content {
+    width:0px;
+    height: 0px;
     opacity: 0 !important;
   }
   .footnote-content-mobile {
